# et-platform

./: CMakeLists.txt  README.md  docker-compose.yaml
common-sw/: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  conanfile.py  hostUtilsConfig.cmake.in
common-sw/.ci/: conan.yaml
common-sw/.et/: conan_install_deps_build.sh
common-sw/actionList/: CMakeLists.txt
common-sw/conan/: ci_build.py
common-sw/debug/: CMakeLists.txt
common-sw/logging/: CMakeLists.txt  LoggingConfig.cmake.in  loggingConfig.cmake.in
common-sw/src/: CMakeLists.txt
common-sw/test_package/: CMakeLists.txt  conanfile.py  test_package_all.cpp  test_package_logging.cpp  test_package_threadpool.cpp
common-sw/threadPool/: CMakeLists.txt
device-api/: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  conanfile.py  deviceApiConfig.cmake.in  esperanto-device-api-config-version.cmake.in  esperanto-device-api-config.cmake.in  requirements.txt
device-api/CMake/: BuildFlatBuffers.cmake  FindProtobuf-c.cmake
device-api/cmake/: GenerateApi.cmake
device-api/conan/: ci_build.py  package.py
device-api/doc/: BuildInstructions.rst  CMakeLists.txt  DeviceAPI.md  DeviceAPI.rst  DeviceAPICodeGen.rst  Doxyfile.in  DoxygenLayout.xml  conf.py.in  contents.rst  index.rst
device-api/include/: CMakeLists.txt  device_apis_build_configuration.h.in  device_apis_message_types.h
device-api/src/: CMakeLists.txt  device_apis_build_configuration.h.in  device_apis_codegen.py  device_apis_cxx.h.jinja  device_apis_message_types.h  device_apis_rpc_types.h.jinja  device_apis_spec.h.jinja  device_apis_trace_types.h  device_apis_tracing_types.h.jinja
device-api/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
device-bootloaders/: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  EsperantoBootLoaderConfig.cmake.in  EsperantoBootLoaderConfigVersion.cmake.in  README.md  Toolchain-gcc-riscv.cmake  conanfile.py  sonar-project.properties
device-bootloaders/BootromTrampolineToBL2/: CMakeLists.txt
device-bootloaders/CI/: Jenkinsfile-checkin-top-level.groovy
device-bootloaders/ServiceProcessor/: CMakeLists.txt
device-bootloaders/ServiceProcessorBL1/: CMakeLists.txt
device-bootloaders/ServiceProcessorBL2/: CMakeLists.txt
device-bootloaders/doc/: .Doxyfile.in.swp  .index.rst.swp  CMakeLists.txt  Doxyfile.in  Overview.rst  conf.py.in  contents.rst  index.rst
device-bootloaders/scripts/: CMakeLists.txt
device-bootloaders/src/: CMakeLists.txt
device-management-application/: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  README.md  conanfile.py  deviceManagementApplicationConfig.cmake.in  dm_tester.cc  readme.md
device-minion-runtime/: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  EsperantoDeviceMinionRuntimeConfig.cmake.in  EsperantoDeviceMinionRuntimeConfigVersion.cmake.in  README.md  Toolchain-gcc-riscv.cmake  conanfile.py  device-firmware.py  esperanto-fw-config.cmake.in  flash.sh  otp_skip_vault.sh  requirements.txt  sonar-project.properties  template-repo.py
devicelayer/: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  DeviceLayerConfig.cmake.in  conanfile.py  deviceLayerConfig.cmake.in  sonar-project.properties
devicemanagement/: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  conanfile.py  deviceManagementConfig.cmake.in
esperanto-tools-libs/: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  Doxyfile  EsperantoRuntimeConfig.cmake.in  EsperantoRuntimeConfigVersion.cmake.in  conanfile.py  conanfile_device_artifacts_0.12.1.txt  conanfile_device_artifacts_0.12.3.txt  conanfile_device_artifacts_0.14.1.txt  conanfile_device_artifacts_current.txt  conanfile_device_artifacts_latest.txt  conanfile_device_artifacts_unreleased.txt  conanfile_device_depends_sw_stack_latest.txt  conanfile_device_depends_sw_stack_v1.3.0.txt  conanfile_device_depends_sw_stack_v1.3.3.txt  conanfile_device_depends_sw_stack_v1.4.4.txt  conanfile_device_depends_sw_stack_v1.5.3.txt  requirements.txt  runtimeConfig.cmake.in  sonar-project.properties
et-common-libs/: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  cm_rt_svcs.cmake  cm_umode.cmake  conanfile.py  et-common-libs-config.cmake.in  minion_bl.cmake  mm_rt_svcs.cmake  sonar-project.properties  sp_bl1.cmake  sp_bl2.cmake
et-trace/: .clang-format  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  README.md  conanfile.py  device_trace.c  device_trace.h  device_trace_types.h  esperantoTraceConfig.cmake.in  test-plan-trace.ods
etsoc-hal/: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  README.md  conanfile.py  etsoc_halConfig.cmake.in  sonar-project.properties
firmware-flash-tool/: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  EsperantoFlashToolConfig.cmake.in  EsperantoFlashToolConfigVersion.cmake.in  conanfile.py  test_image_template.json  test_partition_template.json
signedImageFormat/: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  conanfile.py  signedImageFormatConfig.cmake.in
sw-sysemu/: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  SysemuConfig.cmake.in  agent.cpp  agent.h  atomics.h  cache.h  conanfile.py  conanfile_embedded_elfs.txt  csrs.h  cvt.c  cvt.cpp  cvt.h  debugmodule.cpp  decode.cpp  decode.h  emu.c  emu.cpp  emu.cpp.orig  emu.h  emu.mk  emu_casts.h  emu_defines.h  emu_gio.cpp  emu_gio.h  emu_memop.cpp  emu_memop.h  esrs.cpp  esrs.h  flb.cpp  fpu.cpp  fpu.h  fpu_casts.h  fpu_types.h  (+73 more)
test-compute-kernels/: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  EsperantoTestKernelsConfig.cmake.in  EsperantoTestKernelsConfigVersion.cmake.in  Toolchain-gcc-riscv.cmake  conanfile.py
tf-protocol/: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  README.md  conanfile.py  esperanto-tf-protocol-config-version.cmake.in  esperanto-tf-protocol-config.cmake.in  requirements.txt  tf-protocolConfig.cmake.in
(+3699 files in other folders)
